--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -25,10 +25,10 @@
     <% end %>
 
     <div id="search">
-      <form action="">
-        <input type="text" name="" />
-        <input type="submit" value="" />
-      </form>
+      <%= form_tag search_path, method: :get do %>
+	<%= text_field_tag :q, params[:q], class: 'main_search_field' %>
+	<%= submit_tag 'Поиск' %>
+      <% end %>
     </div>
 
   </div>
