--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -51,9 +51,9 @@
           <li><a href="">Оргкомитет</a></li>
         </ul>
       </div>
-      <li><%= link_to 'Конкурсы', '#' %></li>
-      <li><%= link_to 'Экспертный совет', '#' %></li>
-      <li><%= link_to 'Спецпроект', '#' %></li>
+      <li><%= link_to 'Конкурсы', contests_path %></li>
+      <li><%= link_to 'Экспертный совет', experts_path %></li>
+      <li><%= link_to 'Спецпроект', special_projects_path %></li>
     </ul>
   </div>
 </div>
