--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -188,10 +188,10 @@
           <div class="inner">
             <% Sponsor.all.each do |sponsor| %>
               <article>
-                <%= link_to image_tag(sponsor.photo.url), '#', class: :thumb %>
+                <%= link_to image_tag(sponsor.photo.url), sponsor_path(sponsor), class: :thumb %>
                 <div class="info">
                   <%= sponsor.first_name %><br /><span><%= sponsor.last_name.upcase %></span><br />
-                  <%= link_to 'Весь совет', '#', class: :all_trustee %>
+                  <%= link_to 'Весь совет', sponsors_path, class: :all_trustee %>
                 </div>
               </article>
             <% end %>
