--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -16,11 +16,10 @@
         <div class="menu">
           <ul>
             <li><a href="">Москва для детей</a></li>
-            <li><a href="">Вопрос специалисту</a></li>
             <li><a href="">Журнал</a></li>
-            <li><a href="">Конкурсы</a></li>
-            <li><a href="">Экспертный совет</a></li>
-            <li><a href="">Спецпроекты</a></li>
+	    <li><%= link_to 'Конкурсы', contests_path %></li>
+	    <li><%= link_to 'Экспертный совет', experts_path %></li>
+	    <li><%= link_to 'Спецпроекты', special_projects_path %></li>
           </ul>
         </div>
         <div class="copy">
