--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,48 +1,17 @@
+<div id="center">
 
-sorting:
-<%= link_to "По названию",
-            activities_path(sort: 'title'),
-            class: :activities_filter_link,
-            "data-key" => :sort, "data-value" => :title %>
-<%= link_to "По пользовательскому рейтингу",
-            activities_path(sort: 'users_rating'),
-            class: :activities_filter_link,
-            "data-key" => :sort, "data-value" => :users_rating %>
-<%= link_to "По экспертной оценке",
-            activities_path(sort: 'experts_rating'),
-            class: :activities_filter_link,
-            "data-key" => :sort, "data-value" => :experts_rating %>
-<br />
+  <div class="workshop_list">
 
-metro station:
-<%= select_tag "metro_station_id",\
-               options_from_collection_for_select(MetroStation.all, 'id', 'title'),
-               id: :activities_metro_station_select,
-               include_blank: true %>
-<br />
+    <div class="catalog">
+      <h1>Детские кружки Москвы</h1>
+      <%= render partial: 'search_form' %>
 
-<%= link_to "Экспертная оценка:", '#', id: :experts_rating_link %>
-<%= text_field_tag 'start', 0, id: :experts_rating_start %> -
-<%= text_field_tag 'end', 5, id: :experts_rating_end %><br />
+      <div class="activities">
+	<%= render 'activities', activities: @activities %>
+      </div>
 
-<%= link_to "Пользовательский рейтинг:", '#', id: :users_rating_link %>
-<%= text_field_tag 'start', 0, id: :users_rating_start %> -
-<%= text_field_tag 'end', 5, id: :users_rating_end %><br />
+    </div>
 
-<% @directions.each do |direction_tag| %>
-  <%= link_to direction_tag.name,
-              activities_path(direction_tag_id: direction_tag.id),
-              class: :activities_filter_link,
-              "data-key" => :direction_tag_id, "data-value" => direction_tag.id %>
-<% end %><br />
+  </div>
 
-<% AgeTag.all.each do |age_tag| %>
-  <%= link_to age_tag.title,
-              activities_path(age_tag_ids: age_tag.id),
-              class: :activities_filter_link,
-              "data-key" => :age_tag_ids, "data-value" => age_tag.id %>
-<% end %>
-            
-<div id="activities_list">
-  <%= render 'activities', activities: @activities %>
 </div>
