--- a/app/views/interviews/show.html.erb
+++ b/app/views/interviews/show.html.erb
@@ -1,6 +1,82 @@
-<h1><%= @interview.title %></h1>
-<h3><%= @interview.author %></h3>
-<p><%= @interview.content %></p>
+<div id="center">
+  <div class="pages">
+    <div class="common">
+      <h1><%= @interview.title %></h1>
+      <strong><%= @interview.author %>. <%= Russian::strftime(@interview.created_at, "%A, %e %B %Y г.") %></strong>
+      <div class="post_preview">
+        <div class="thumb">
+          <img alt="" src="/assets/samp/post_samp_prev.jpg" style="background-image: url('/assets/samp/post_samp_prev.jpg');">
+        </div>
+        <div class="short_desc">
+          <%= @interview.short_description %>
+        </div>
+        <div class="clear"></div>
+      </div>
+      <div class="post_info">
+        <div class="other_link">
+          <div class="title">Об авторе</div>
+          <br>
+          <br>
+          <div class="title">Другие статьи автора</div>
+          <ul>
+            <li><a href="">Как я стала мамой</a></li>
+            <li><a href="">Про манекенщицу, трех дочек и детский сад в Сомали</a></li>
+          </ul>
+        </div>
+        <div class="post_share">
+          <div class="title">Делись с друзьями</div>
+          sdf dfg f g
+        </div>
+      </div>
+      <div class="description">
+        <%= @interview.content %>
+      </div>
+      <div class="clear"></div>
+    </div>
+    <div class="sidebar">
+      <div class="alongside">
+        <div class="title">Лучшие места для детей в Москве</div>
+          <ul>
+            <li>
+              <span class="thumb">
+                <a href="">
+                <img alt="" src="/assets/samp/samp_1.jpg" style="background-image: url("/assets/samp/samp_1.jpg");">
+                </a>
+              </span>
+              <span class="name">
+                <a href="">Центр детских проектов и разработок "Шардам"</a>
+              </span>
+              <span class="geo">Северо-Восток</span>
+            </li>
+            <li>
+              <span class="thumb">
+                <a href="">
+                <img alt="" src="/assets/samp/samp_1.jpg" style="background-image: url("/assets/samp/samp_1.jpg");">
+                </a>
+              </span>
+              <span class="name">
+                <a href="">Центр детских проектов и разработок "Шардам"</a>
+              </span>
+              <span class="geo">Северо-Восток</span>
+            </li>
+            <li>
+              <span class="thumb">
+                <a href="">
+                <img alt="" src="/assets/samp/samp_1.jpg" style="background-image: url("/assets/samp/samp_1.jpg");">
+                </a>
+              </span>
+              <span class="name">
+                <a href="">Центр детских проектов и разработок "Шардам"</a>
+              </span>
+              <span class="geo">Северо-Восток</span>
+            </li>
+          </ul>
+      </div>
+    </div>
+    <div class="clear"></div>
+  </div>
+</div>
+<!-- dunno what to do with it
 
 <h5>Interview Tags</h5>
 <% tag_cloud(@tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
@@ -24,4 +100,4 @@
     var can_create_comment = <%= can? :create, :comment %>
   </script>
 <% end %>
-
+-->
