--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -1,3 +1,80 @@
+<div id="center">
+  <div class="pages">
+    <div class="common">
+      <h1><%= @news.title %></h1>
+      <div>
+        <strong><%= @news.author %>. <%= Russian::strftime(@news.created_at, "%A, %e %B %Y г.") %></strong>
+      </div>
+      <div class="post_info">
+        <div class="thumb">
+          <img width="238" alt="" src="/assets/samp/post_samp_prev.jpg" style="background-image: url('/assets/samp/post_samp_prev.jpg');">
+        </div>
+        <div class="other_link">
+          <div class="title">Об авторе</div>
+          <br>
+          <br>
+          <div class="title">Другие статьи автора</div>
+          <ul>
+            <li><a href="">Как я стала мамой</a></li>
+            <li><a href="">Про манекенщицу, трех дочек и детский сад в Сомали</a></li>
+          </ul>
+        </div>
+        <div class="post_share">
+          <div class="title">Делись с друзьями</div>
+          sdf dfg f g
+        </div>
+      </div>
+      <div class="description">
+        <%= @news.content %>
+      </div>
+      <div class="clear"></div>
+    </div>
+    <div class="sidebar">
+      <div class="alongside">
+        <div class="title">Лучшие места для детей в Москве</div>
+          <ul>
+            <li>
+              <span class="thumb">
+                <a href="">
+                <img alt="" src="/assets/samp/samp_1.jpg" style="background-image: url("/assets/samp/samp_1.jpg");">
+                </a>
+              </span>
+              <span class="name">
+                <a href="">Центр детских проектов и разработок "Шардам"</a>
+              </span>
+              <span class="geo">Северо-Восток</span>
+            </li>
+            <li>
+              <span class="thumb">
+                <a href="">
+                <img alt="" src="/assets/samp/samp_1.jpg" style="background-image: url("/assets/samp/samp_1.jpg");">
+                </a>
+              </span>
+              <span class="name">
+                <a href="">Центр детских проектов и разработок "Шардам"</a>
+              </span>
+              <span class="geo">Северо-Восток</span>
+            </li>
+            <li>
+              <span class="thumb">
+                <a href="">
+                <img alt="" src="/assets/samp/samp_1.jpg" style="background-image: url("/assets/samp/samp_1.jpg");">
+                </a>
+              </span>
+              <span class="name">
+                <a href="">Центр детских проектов и разработок "Шардам"</a>
+              </span>
+              <span class="geo">Северо-Восток</span>
+            </li>
+          </ul>
+      </div>
+    </div>
+    <div class="clear"></div>
+  </div>
+</div>
+
+
+<!--
 <h1><%= @news.title %></h1>
 <h3><%= @news.author %></h3>
 <p><%= @news.content %></p>
@@ -24,3 +101,4 @@
     var can_create_comment = <%= can? :create, :comment %>
   </script>
 <% end %>
+-->
