--- a/app/views/admin/articles/_form.html.erb
+++ b/app/views/admin/articles/_form.html.erb
@@ -1,13 +1,13 @@
-<%= semantic_form_for [:admin, @interview], html: { multipart: true } do |f| %>
+<%= semantic_form_for [:admin, @article], html: { multipart: true } do |f| %>
   <%= f.inputs 'Основное' do %>
     <%= f.input :title %>
     <%= f.input :author, as: :select, collection: User.all %>
     <%= f.input :short_description, input_html: {size: 5} %>
-    <div id="wysihtml5-toolbar-interview" style="display: none;">
+    <div id="wysihtml5-toolbar-article" style="display: none;">
       <a data-wysihtml5-command="bold">bold</a>
       <a data-wysihtml5-command="italic">italic</a>
-      <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="div">question</a>
       <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h3">intermediate header</a>
+      <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="blockquote">quote</a>
   
       <a data-wysihtml5-command="createLink">insert link</a>
       <div data-wysihtml5-dialog="createLink" style="display: none;">
@@ -19,7 +19,8 @@
     </div>
     <%= f.input :content, input_html: {size: 10} %>
     <%= f.input :picture, as: :file, hint: f.template.image_tag(f.object.picture.url(:medium)) %>
-    <%= f.input :interview_tag_list %>
+    <%= f.input :article_category, as: :select, collection: ArticleCategory.all %>
+    <%= f.input :article_tag_list %>
   <% end %>
   <%= f.buttons %>
 <% end %>
