interviews review field added

--- a/app/views/interviews/show.html.erb
+++ b/app/views/interviews/show.html.erb
@@ -14,10 +14,9 @@
       </div>
       <div class="post_info">
         <div class="other_link">
-          <div class="title">Об авторе</div>
-          <br>
-          <br>
-          <div class="title">Другие статьи автора</div>
+          <div class="title"><%= @interview.review_title %></div>
+            <%= @interview.review %>
+          <div class="title">Ссылки по теме</div>
           <ul>
             <li><a href="">Как я стала мамой</a></li>
             <li><a href="">Про манекенщицу, трех дочек и детский сад в Сомали</a></li>
