--- a/app/views/admin/interviews/_form.html.erb
+++ b/app/views/admin/interviews/_form.html.erb
@@ -2,6 +2,8 @@
   <%= f.inputs 'Основное' do %>
     <%= f.input :title %>
     <%= f.input :author, as: :select, collection: User.all %>
+    <%= f.input :review_title %>
+    <%= f.input :review %>
     <%= f.input :short_description, input_html: {size: 5} %>
     <div id="wysihtml5-toolbar-interview" style="display: none;">
       <a data-wysihtml5-command="bold">bold</a>
