put #center tag into layout, split home page into partials, fix indentation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,11 @@
         <%= render partial: 'shared/header' %>
       </div>
 
-      <%= yield %>
+      <%= yield(:before_center) %>
+      
+      <div id="center">
+        <%= yield %>
+      </div>
 
       <div id="footer">
         <%= render partial: 'shared/footer' %>
