--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,17 +1,11 @@
-<div id="center">
 
-  <div class="workshop_list">
+<div class="workshop_list">
+  <div class="catalog">
+    <h1>Детские кружки Москвы</h1>
+    <%= render 'search_form' %>
 
-    <div class="catalog">
-      <h1>Детские кружки Москвы</h1>
-      <%= render partial: 'search_form' %>
-
-      <div class="activities">
-	<%= render 'activities', activities: @activities %>
-      </div>
-
+    <div class="activities">
+      <%= render 'activities', activities: @activities %>
     </div>
-
   </div>
-
 </div>
