fix main page and interview

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -9,13 +9,13 @@
   </div>
   <div id="slider_news" class="slider">
     <div class="slides_container">
-      <div style="background:url(/assets/samp/slide_samp.jpg) no-repeat 0 top; height:395px">
+      <div class="slide" style="background:url(/assets/samp/slide_samp.jpg) no-repeat 0 top; height:395px">
 
       </div>
-      <div style="background:url(/assets/samp/slide_samp.jpg) no-repeat 0 top; height:395px">
+      <div class="slide" style="background:url(/assets/samp/slide_samp.jpg) no-repeat 0 top; height:395px">
 
       </div>
-      <div style="background:url(/assets/samp/slide_samp.jpg) no-repeat 0 top; height:395px">
+      <div class="slide" style="background:url(/assets/samp/slide_samp.jpg) no-repeat 0 top; height:395px">
 
       </div>
     </div>
@@ -24,24 +24,110 @@
   </div>
   <div id="slider_user" class="slider">
     <div class="slides_container">
-      <div style="background:url(/assets/samp/slide_samp_2.jpg) no-repeat 0 top; height:395px">
-
+      <div class="slide" style="background:url(/assets/samp/slide_samp_2.jpg) no-repeat 0 top; height:395px">
+                    <div class="slide_text">
+                        <div style="float:left; padding-right:50px; padding-top:40px">Александра Сиснёва <br />
+                        sisneva@bright-people.ru <br />
+                        + 7 (916) 552 70 72<br />
+                        <br />
+                        Мария Фурман <br />
+                        furman@bright-people.ru <br />
+                        + 7 (926) 552 04 25<br />
+                        </div>
+                        <div style="float:left; padding-right:30px; padding-top:40px">
+                        Аккредитация журналистов:<br />
+                        Виктория Клымык<br />
+                        vika@mkb.ru<br />
+                        +7 (916) 998 87 68 <br />
+                        <br />
+                        Коршунова Наталья <br />
+                        n.k.resheniya@gmail.com <br />
+                        + 7 (903) 103 45 45
+                        </div>
+                    </div>
       </div>
-      <div style="background:url(/assets/samp/slide_samp_2.jpg) no-repeat 0 top; height:395px">
-
+      <div class="slide" style="background:url(/assets/samp/slide_samp_2.jpg) no-repeat 0 top; height:395px">
+                    <div class="slide_text">
+                        <div style="float:left; padding-right:50px; padding-top:40px">Александра Сиснёва <br />
+                        sisneva@bright-people.ru <br />
+                        + 7 (916) 552 70 72<br />
+                        <br />
+                        Мария Фурман <br />
+                        furman@bright-people.ru <br />
+                        + 7 (926) 552 04 25<br />
+                        </div>
+                        <div style="float:left; padding-right:30px; padding-top:40px">
+                        Аккредитация журналистов:<br />
+                        Виктория Клымык<br />
+                        vika@mkb.ru<br />
+                        +7 (916) 998 87 68 <br />
+                        <br />
+                        Коршунова Наталья <br />
+                        n.k.resheniya@gmail.com <br />
+                        + 7 (903) 103 45 45
+                        </div>
+                    </div>
       </div>
-      <div style="background:url(/assets/samp/slide_samp_2.jpg) no-repeat 0 top; height:395px">
-
+      <div class="slide" style="background:url(/assets/samp/slide_samp_2.jpg) no-repeat 0 top; height:395px">
+                    <div class="slide_text">
+                        <div style="float:left; padding-right:50px; padding-top:40px">Александра Сиснёва <br />
+                        sisneva@bright-people.ru <br />
+                        + 7 (916) 552 70 72<br />
+                        <br />
+                        Мария Фурман <br />
+                        furman@bright-people.ru <br />
+                        + 7 (926) 552 04 25<br />
+                        </div>
+                        <div style="float:left; padding-right:30px; padding-top:40px">
+                        Аккредитация журналистов:<br />
+                        Виктория Клымык<br />
+                        vika@mkb.ru<br />
+                        +7 (916) 998 87 68 <br />
+                        <br />
+                        Коршунова Наталья <br />
+                        n.k.resheniya@gmail.com <br />
+                        + 7 (903) 103 45 45
+                        </div>
+                    </div>
       </div>
     </div>
     <a href="" class="next">Вперед</a>
     <a href="" class="prev">Назад</a>
   </div>
   <div id="slider_fest" class="slider">
-
+    <div class="slides_container">
+      <div class="slide" style="background:url(/assets/samp/slide_2.jpg) no-repeat 0 top; height:395px">
+					<div class="slide_text">
+         		<div style="float:left; padding-right:50px; padding-top:140px">
+          	Ежегодный международный фестиваль, <br />объединяющий лучшие культурные и <br />образовательные проекты для детей!
+            </div>
+          </div>
+      </div>
+      <div class="slide" style="background:url(/assets/samp/slide_4.jpg) no-repeat 0 top; height:395px">
+					<div class="slide_text">
+         		<div style="float:left; padding-right:50px; padding-top:140px">
+          	Ежегодный международный фестиваль, <br />объединяющий лучшие культурные и <br />образовательные проекты для детей!
+            </div>
+          </div>
+      </div>
+      <div class="slide" style="background:url(/assets/samp/slide_1.jpg) no-repeat 0 top; height:395px">
+					<div class="slide_text">
+         		<div style="float:left; padding-right:50px; padding-top:140px">
+          	Ежегодный международный фестиваль, <br />объединяющий лучшие культурные и <br />образовательные проекты для детей!
+            </div>
+          </div>
+      </div>
+    </div> 
   </div>
   <div id="slider_org" class="slider">
-
+      <div class="slides_container">
+          <div class="slide" style="background:url(/assets/samp/slide_org.jpg) no-repeat 0 top; height:395px">
+  
+              <div class="slide_text">
+                
+              </div>
+  		</div>
+      </div>
   </div>
 </div>
 <div class="main_content">
