--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -85,13 +85,13 @@ h1 { font-size:22px; color:#4f4f4f}
 #nested_slider .slider { position:absolute; top:0px; width:100%}
 
 #nested_slider .slides_container {
-        width:100%;
-        height:395px;
+	width:100%;
+	height:395px;
 }
 #nested_slider .slides_container div.slide {
-        width:100%;
-        height:395px;
-        display:block;
+	width:100%;
+	height:395px;
+	display:block;
 }
 
 #nested_slider .slides_container div.slide .slide_text { position:relative; z-index:20; text-shadow:1px 1px #000; font-family:Futura; font-size:24px; color:#fff; width:900px; margin-left:6%}
@@ -437,7 +437,10 @@ h1 { font-size:22px; color:#4f4f4f}
 .post_preview .thumb img { height:275px; width:440px; border-radius:6px;}
 .post_preview .short_desc { font-size:16px; color:#585858; font-family:Futura}
 .post_info { float:left; width:240px; }
-.description { margin-left:260px;}
+.post_info .description { margin-left:260px;}
+
+.post_info .description h3 { color:#c14425; font-size:18px; font-family:Futura; padding:10px 0px}
+.post_info .description .question-class { color:#343434; font-weight:bold; padding:10px 0px 10px 40px; background:url(/assets/detail_aprroved.png) no-repeat 5px 0px;}
 
 .post_info .thumb { behavior: url(border-radius.htc); -moz-border-radius:10px; border-radius:10px; -webkit-border-radius:10px; -khtml-border-radius:10px; margin-bottom:20px; overflow:hidden}
 
@@ -490,6 +493,127 @@ h1 { font-size:22px; color:#4f4f4f}
 .profile_magazine .close { background:url(/assets/close_red_big.png) no-repeat 0px 0px; width:32px; height:32px; display:none; position:absolute; z-index:10; right:-10px; top:-10px;}
 .profile_magazine:hover .close { display:block}
 
+
+.aboute_contest { padding:20px 0px}
+
+.aboute_contest .thumb { width:840px; height:270px; overflow:hidden; behavior: url(border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; margin-bottom:20px; }
+
+.aboute_contest .left_part { float:left; width:660px;}
+.aboute_contest .right_part { float:right; width:140px;}
+
+.aboute_contest .title { font-size:20px; color:#007ba4; font-family:Futura;}
+
+.contest_action {}
+.contest_action ul {}
+.contest_action li { padding:5px 0px }
+.contest_action li a { padding-left:28px; display:block; font-family:Futura; font-size:14px;}
+.contest_action li.terms a { background:url(/assets/action_ico_pushpin.png) no-repeat 0px 3px;}
+.contest_action li.watch a { background:url(/assets/action_ico_eve.png) no-repeat 0px 3px;}
+.contest_action li.participate a { background:url(/assets/action_ico_flag.png) no-repeat 0px 3px;}
+
+.contest_list {}
+.contest_list .preview_tender { border-bottom:1px solid #ccc; padding:20px 0px;}
+.contest_list .preview_tender .thumb { width:325px; height:100px; overflow:hidden; float:left; behavior: url(border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; margin-top:4px}
+.contest_list .preview_tender .thumb img { width:325px; height:100px; border-radius:6px;}
+.contest_list .preview_tender .info { float:left; margin-left:20px; width:340px;}
+.contest_list .preview_tender .info .name a { font-family:Futura; color:#007ba4; color:#007ba4; font-size:16px }
+.contest_list .preview_tender .info .date { font-size:12px; padding:3px 0px}
+.contest_list .preview_tender .info .desc { overflow:hidden; height:66px; position:relative}
+.contest_list .preview_tender .info .desc .fade { display:block; position:absolute; right:0; bottom:0; width:96px; height:26px; background:url(/assets/fade_text.png) no-repeat}
+.contest_list .preview_tender .contest_action { float:right; width:140px;}
+
+
+
+.work_list {}
+.work_list .sorter_wraper { padding:10px 0px; border-bottom:3px solid #ccc;}
+.work_list .preview_work { float:left; width:24%; margin-right:1%; margin:20px 0px}
+.work_list .preview_work .info { width:160px; margin:auto; position:relative;}
+.work_list .name a { font-size:14px; font-weight:bold; color:#007ba4; text-decoration:none; line-height:1.3}
+.work_list .info .thumb { height:100px; width:160px; behavior: url(border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; overflow:hidden; position:relative; margin:0px 0px 10px 0px}
+.work_list .info .thumb img { height:100px; width:160px; border-radius:6px;}
+
+.work_list .info .author { font-size:12px;}
+
+.work_detail { padding:20px 0px}
+.work_detail .left_part { float:left; width:220px}
+.work_detail .right_part { float:right; width:600px}
+.work_detail .title { padding:10px 0; font-size:16px; font-weight:bold; color:#007ba4;}
+.work_detail .author { font-size:12px;}
+.work_detail .date { font-size:12px;}
+.work_detail .desc { padding-top:10px;}
+
+.participation_contest .participation_step {  behavior: url(border-radius.htc); -moz-border-radius:10px; border-radius:10px; -webkit-border-radius:10px; -khtml-border-radius:10px; background:#ededed; overflow:hidden; }
+.participation_contest .participation_step .info { float:left; width:400px; padding:30px}
+.participation_contest .participation_step .social_login { float:left; padding:30px;}
+.participation_contest .participation_step .social_login li { padding-bottom:7px;}
+.participation_contest .participation_step .social_login li img { margin-right:5px}
+
+
+.work_thumb { float:right; width:160px; height:100px; overflow:hidden; margin-top:30px; margin-right:30px; behavior: url(border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px;}
+
+.participation_contest .participation_form { padding:30px;}
+.participation_contest .participation_step .button { padding:30px 0px 30px 140px; background:#cacaca;}
+.participation_contest .participation_step .button input { background:#0aaceb; border:none; color:#fff; font-size:16px; padding:4px 10px; behavior: url(border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; cursor:pointer}
+.participation_contest .title { font-size:16px; color:#007ba4; font-weight:bold}
+
+.participation_contest .participation_form .field  { padding:4px 0px; min-height:40px;}
+.participation_contest .participation_form .field label  { float:left; width:110px; font-weight:bold}
+.participation_contest .participation_form .field input  { margin-left:10px; background:#fff; border:1px solid #b2c4d3; margin:0px; padding:7px 10px; font-size:14px; color:#7c7c7c; width:361px}
+.participation_contest .participation_form .field textarea  { margin-left:10px; background:#fff; border:1px solid #b2c4d3; margin:0px; padding:7px 10px; font-size:14px; color:#7c7c7c; width:361px}
+
+.participation_contest .participation_form .field .download_button_wrapper { cursor:pointer; margin-left:10px; width:383px; height:38px; overflow:hidden; display:block; position:relative}
+.participation_contest .participation_form .field .mask_button { text-align:center; display:block; background:url(/assets/download_button.png) no-repeat; width:383px; height:38px; line-height:38px; cursor:pointer}
+.participation_contest .participation_form .field .download_button_wrapper input {  position:absolute; z-index:10; top:0; margin-left:-10px; margin-top:-10px; background:none; border:none; font-size:2000px; cursor:pointer}
+
+.participation_contest .participation_step.thanks { padding:30px; background:#cacaca}
+
+
+
+.expert_title { text-align:center;}
+.expert_title h1 { font-size:24px;}
+
+.expert_nav { min-width:960px; margin:auto; max-width:1100px; position:relative}
+.expert_nav .prev_exp { float:left; width:140px; background:url(/assets/expert_nav_prev.png) no-repeat left center; padding-left:24px}
+.expert_nav .next_exp { float:right; width:140px; background:url(/assets/expert_nav_next.png) no-repeat right center; padding-right:24px}
+.expert_nav .exp_cell {}
+.expert_nav .exp_cell .thumb { float:left; width:56px; height:56px; behavior: url(border-radius.htc); -moz-border-radius:28px; border-radius:28px; -webkit-border-radius:28px; -khtml-border-radius:28px; overflow:hidden}
+.expert_nav .exp_cell .thumb img {  width:56px; height:56px; border-radius:28px;}
+.expert_nav .exp_cell .name { text-decoration:none; margin-left:66px; font-size:14px; color:#007ba4; font-family:Futura; padding-top:5px}
+.expert_nav .exp_cell .name a { text-decoration:none; font-size:14px; color:#007ba4; font-family:Futura}
+
+.expert_big_info { width:510px; margin:auto; padding:20px 0px}
+.expert_big_info .name { float:left; width:100px; text-align:right; margin-right:15px; padding-top:100px; color:#007ba4; font-family:Futura; font-size:20px}
+.expert_big_info .thumb { float:left; width:278px; behavior: url(border-radius.htc); -moz-border-radius:139px; border-radius:139px; -webkit-border-radius:139px; -khtml-border-radius:139px; overflow:hidden }
+.expert_big_info .thumb img { border-radius:139px; height:278px; width:278px;}
+.expert_big_info .doljnost { float:left; width:100px; margin-left:15px; padding-top:100px; font-family:Futura; font-size:20px }
+
+.expert_page {}
+
+.expert_page .left_part { float:left; width:240px;}
+.expert_page .right_part { margin-left:260px;}
+
+
+.expert_page .bio { font-size:12px; margin-bottom:20px}
+.expert_page .bio a { font-size:12px;}
+.expert_page .bio .title { font-size:16px; color:#007ba4; font-family:Futura;}
+
+.expert_page .preview_catalog { width:24%}
+.expert_page .dop_title {  color:#007ba4; background:url(/assets/magaz_arrow_red.png) no-repeat 0px 7px;font-size:16px;padding:0 0 15px 20px; font-family:Futura; display:block}
+
+
+.expert_list_wrapper { background:url(/assets/slider_mask.png) center}
+.expert_list { margin:auto; width:960px;}
+.expert_list .exp_preview { position:relative; float:left; width:143px; margin-top:20px; margin-right:11px; text-align:center; }
+.expert_list .exp_preview.last { margin-right:0px;}
+.expert_list .exp_preview .mark { background:url(/assets/exp_mark.png) no-repeat; display:block; width:19px; height:24px; text-align:center; line-height:24px; padding:0px 10px 0px 5px; color:#fff; position:absolute; top:50px;}
+.expert_list .exp_preview .thumb { margin:auto; overflow:hidden;height:122px;width:122px; -moz-border-radius:60px; border-radius:60px; -webkit-border-radius:60px; -khtml-border-radius:60px; behavior: url(border-radius.htc); margin-bottom:5px}
+.expert_list .exp_preview .thumb img { height:122px; width:122px; border-radius:60px;}
+
+.expert_list .exp_preview .info {}
+.expert_list .exp_preview .name { color:#007ba4; font-weight:bold; padding:2px 10px; text-align:center; display:block; line-height:1.3}
+
+
+
 /* FOOTER */
 #footer { font-size:13px; color:#fff; background:#ECECE7}
 #footer a { color:#fff;}
@@ -518,18 +642,18 @@ h1 { font-size:22px; color:#4f4f4f}
 
 
 @media screen and (max-width: 1080px) {
-        .preview_cell { float:left; width:23%; margin-left:1%; margin-right:1%}
-        .spec_project_last .preview_cell { width:31%}
-        .main_content .subscription input[type="text"], .main_content .subscription input[type="email"]  { width:90px;}
-        .catalog .preview_catalog { width:25%}
-        .entertainment_list .preview_catalog { width:33%;}
-        .catalog .preview_catalog.approved { width:25%}
-        .catalog .preview_catalog.approved .thumb { width:186px;}
-        .catalog .preview_catalog.approved .thumb img { height:114px; border-radius:6px;}
-        .catalog .preview_catalog.approved .thumb img { margin-left:-110px}
-        .catalog .preview_catalog.approved .mark { width:186px}
-        .timer_wrapper { width:222px;}
-        .pages .sidebar { display:none}
-
-        .preview_specialist { width:24%;}
-}   
+	.preview_cell { float:left; width:23%; margin-left:1%; margin-right:1%}
+	.spec_project_last .preview_cell { width:31%}
+	.main_content .subscription input[type="text"], .main_content .subscription input[type="email"]  { width:90px;}
+	.catalog .preview_catalog { width:25%}
+	.entertainment_list .preview_catalog { width:33%;}
+	.catalog .preview_catalog.approved { width:25%}
+	.catalog .preview_catalog.approved .thumb { width:186px;}
+	.catalog .preview_catalog.approved .thumb img { height:114px; border-radius:6px;}
+	.catalog .preview_catalog.approved .thumb img { margin-left:-110px}
+	.catalog .preview_catalog.approved .mark { width:186px}
+	.timer_wrapper { width:222px;}
+	.pages .sidebar { display:none}
+	.expert_page .preview_catalog { width:32%}
+	.preview_specialist { width:24%;}
+}    
