add experts index page makeup

--- a/app/views/experts/index.html.erb
+++ b/app/views/experts/index.html.erb
@@ -1,7 +1,24 @@
-<% @experts.each do |expert| %>
-  <p>
-    <%= link_to expert.name, expert %>
-    <br>
-    <%= expert.description.split('.').first %>
-  </p>
-<% end %>
+<div class="pages">
+  <div class="expert_title">
+    <h1>Экспертный совет ярких людей</h1>
+     12 ярких людей современной России оценивают Москву для детей
+  </div>
+  
+  <div class="expert_list_wrapper">
+    <div class="expert_list">
+      
+    <% @experts.each do |expert| %>
+      <div class="exp_preview">
+        <span class="mark"><%= expert.mark %></span>
+        <div class="thumb">
+          <%= link_to image_tag(expert.photo), expert %>
+        </div>
+        <span class="name"><%= expert.name %></span>
+        <span class="info"><%= expert.description %></span>
+      </div>
+    <% end %>
+      
+      <div class="clear"></div>
+    </div>
+  </div>
+</div>
