seems like field for biography already exists, it just named :about

--- a/app/views/experts/show.html.erb
+++ b/app/views/experts/show.html.erb
@@ -48,7 +48,7 @@
         Биография
       </div>
       <div class="bio">
-         <%= @expert.bio %><br />
+         <%= @expert.about %><br />
         <br />
         <div class="title">
           Другие статьи автора
